--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ android {
 }
 
 dependencies {
+
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.androidx.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
